# sciquest

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sciquest/: agent.py  cli.py  core.py  dashboard.py  io.py  logic.py  loop.py  notebooks.py  templates.py  validation.py
src/sciquest/methods/: __init__.py  ledger.py  prompt_builder.py  registry.py  resolver.py  schema.py
src/sciquest/methods/profiles/: abductive.yaml  bayesian.yaml  causal_interventionist.yaml  design_science.yaml  exploratory_inductive.yaml  feyerabendian_pluralist.yaml  grounded_theory.yaml  kuhnian.yaml  lakatosian.yaml  mechanistic.yaml  popperian_falsificationist.yaml  pragmatist.yaml  standard_empirical.yaml  strong_inference.yaml
tests/: test_agent_launch.py  test_core.py  test_dashboard.py  test_loop.py  test_methods.py
