[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sciquest"
version = "0.1.0"
description = "Agent-operable autonomous research framework for iterative scientific quests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SciQuest contributors"}]
keywords = ["research", "agents", "jupyter", "science", "automation"]
dependencies = [
  "typer>=0.9",
  "PyYAML>=6.0",
  "nbformat>=5.9",
  "nbclient>=0.8",
  "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
papermill = ["papermill>=2.5"]

[project.scripts]
sciquest = "sciquest.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sciquest"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
